feat: change trainings prices

--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -74,8 +74,7 @@
         <!-- Theme Color -->
         <meta name="theme-color" content="#ffffff">
 
-        <!-- Facebook Domain Verification -->
-        <meta name="facebook-domain-verification" content="shf31z6j1ih9ff63lf5inn2c4gouo9" />
+        <link rel="alternate icon" sizes="16x16" href="/favicon.ico?v=1" type="image/x-icon">
         </script>
     </head>
     <body class=" text-base-900 dark:bg-gray-900 dark:text-white font-inter antialiased  text-base-900 dark:bg-gray-900  tracking-tight flex flex-col min-h-screen">
