--- a/src/ar/aboutus.njk
+++ b/src/ar/aboutus.njk
@@ -1,4 +1,7 @@
 ---
     layout: pages/aboutus.njk
-    title: "تدريب آجي نكوديو فالبرمجة"
+    title: "تدريب آجي نكوديو فالبرمجة - تعلم البرمجة خطوة بخطوة"
+    meta_description: "نحن نقدم تدريبات مهنية في البرمجة لمساعدة الطلاب على تحقيق النجاح في مسيرتهم التقنية. انضم إلينا لتعلم مهارات البرمجة الحديثة."
+    meta_keywords: "تدريب البرمجة, تعلم البرمجة, دورة تدريبية, تعلم البرمجة خطوة بخطوة"
+    meta_author: "كريم العيساوي, أشرف تفاح"
 ---
