--- a/src/ar/events.njk
+++ b/src/ar/events.njk
@@ -1,4 +1,7 @@
 ---
     layout: pages/events.njk
-    title: "تدريب آجي نكوديو فالبرمجة"
+    title: "تدريب آجي نكوديو: الفعاليات والدورات التدريبية في البرمجة"
+    meta_description: "اكتشف فعاليات آجي نكوديو القادمة في البرمجة. سواء كنت مبتدئًا أو محترفًا، نقدم لك دورات وورش عمل في مجالات البرمجة المتنوعة لتعزيز مهاراتك."
+    meta_keywords: "فعاليات البرمجة, دورات تدريبية في البرمجة, ورش عمل البرمجة, تعلم البرمجة, تعلم البرمجة للمبتدئين, فعاليات آجي نكوديو"
+    meta_author: "كريم العيساوي, أشرف تفاح"
 ---
