--- a/src/ar/index.njk
+++ b/src/ar/index.njk
@@ -1,4 +1,7 @@
 ---
     layout: pages/home.njk
-    title: "Ajincodew academy"
+    title: "أكاديمية آجي نكوديو: طريقك لإتقان البرمجة والتصميم"
+    meta_description: "تقدم أكاديمية آجي نكوديو دورات شاملة في البرمجة، التصميم الجرافيكي، والتقنيات الحديثة. ابدأ رحلتك التعليمية اليوم واكتسب مهارات في البرمجة، تطوير الويب، والتصميم."
+    meta_keywords: "أكاديمية آجي نكوديو, دورات البرمجة, دورات التصميم الجرافيكي, تعلم البرمجة, تطوير الويب, أكاديمية البرمجة عبر الإنترنت"
+    meta_author: "كريم العيساوي, أشرف تفاح"
 ---
