--- a/src/ar/java.njk
+++ b/src/ar/java.njk
@@ -1,5 +1,7 @@
 ---
-layout: pages/java.njk
-title: "تدريب آجي نكوديو: أساسيات البرمجة وأفضل الممارسات"
-desc: "تعلم أساسيات البرمجة وأفضل الممارسات مع تدريب آجي نكوديو، حيث يمكنك بناء أساس قوي للبرمجة الحديثة. سواء كنت مبتدئًا أو محترفًا، نوفر لك دورات مخصصة تغطي المفاهيم الأساسية، مثل كتابة كود نظيف، وإدارة المشاريع، وحل المشكلات البرمجية. استمتع بحصص مباشرة، مشاريع تطبيقية عملية، ودعم شخصي لتطوير مهاراتك. نوفر لك أيضًا مواد تعليمية متقدمة وشهادات معتمدة عند إكمال الدورة بنجاح، إلى جانب تسجيلات الحصص للرجوع إليها وقت الحاجة. ابدأ اليوم واكتسب الأدوات التي تحتاجها للنجاح في عالم البرمجة المتطور."
+    layout: pages/java.njk
+    title: "تدريب آجي نكوديو: تعلم البرمجة بلغة جافا"
+    meta_description: "تعلم البرمجة باستخدام لغة جافا مع تدريب آجي نكوديو. اتقن المفاهيم الأساسية والمتقدمة لجافا، وابدأ بتطوير تطبيقات حقيقية باستخدام أفضل الممارسات."
+    meta_keywords: "دورات جافا, تعلم جافا, برمجة بلغة جافا, تدريب جافا, تعلم البرمجة, تعلم تطوير التطبيقات, أكاديمية جافا"
+    meta_author: "كريم العيساوي, أشرف تفاح"
 ---
