--- a/src/ar/privacy.njk
+++ b/src/ar/privacy.njk
@@ -1,6 +1,9 @@
 ---
 layout: main.njk
-title: سياسة الخصوصية
+title: "سياسة الخصوصية - Ajincodew Academy"
+meta_description: "اطلع على سياسة الخصوصية الخاصة بـ Ajincodew Academy لمعرفة كيفية جمع البيانات، استخدامها، وحمايتها. نحرص على تقديم أعلى مستويات الأمان وحماية خصوصية المستخدمين."
+meta_keywords: "سياسة الخصوصية, حماية البيانات, خصوصية المستخدم, سياسة الخصوصية Ajincodew, حماية المعلومات الشخصية"
+meta_author: "كريم العيساوي, أشرف تفاح"
 ---
 <main class="flex-grow">
     <section class="relative">
