--- a/src/ar/responsibility.njk
+++ b/src/ar/responsibility.njk
@@ -1,6 +1,9 @@
 ---
-layout: main.njk
-title: إخلاء المسؤولية
+    layout: main.njk
+    title: "إخلاء المسؤولية - Ajincodew Academy"
+    meta_description: "إخلاء مسؤولية Ajincodew Academy. تعلم المزيد حول الحدود القانونية للمحتوى والخدمات المقدمة. نقدم لك كافة التفاصيل المتعلقة باستخدام الموقع، والمحتوى، والدورات التدريبية."
+    meta_keywords: "إخلاء المسؤولية, شروط الاستخدام, Ajincodew Academy, حقوق الطبع والنشر, مسؤولية المحتوى"
+    meta_author: "كريم العيساوي, أشرف تفاح"
 ---
 <main class="flex-grow">
     <section class="relative">
