--- a/src/_includes/pages/aboutus.njk
+++ b/src/_includes/pages/aboutus.njk
@@ -12,7 +12,7 @@ plugins:
         <div class="flex flex-col md:flex-row gap-1 lg:gap-10 mt-6">
             <div class="flex flex-col justify-center items-center flex-shrink-0 p-2 md:p-0 md:w-2/3" dir="{{ dir }}" >
                 <div class="text-center rtl:lg:text-right ltr:lg:text-left self-start md:text-right">
-                    <h2 class="text-2xl font-bold sm:text-3xl">إبدأ رحلتك الآن في عالم البرمجة والتصميم، وطوّر مهاراتك، وافتح آفاقًا جديدة مع أكاديمية أجي نكوديو!</h2>
+                    <h2 class="text-2xl font-bold sm:text-3xl">إبدأ رحلتك الآن في عالم البرمجة والتصميم، وطوّر مهاراتك، وافتح آفاقًا جديدة مع أكاديمية آجينكوديو!</h2>
                     <p class="mt-4 text-lg mb-4 md:mb-0">إكتسب المهارات الرقمية التي تساعدك على تحقيق أهدافك الشخصية والمهنية من خلال برامج تدريبية مبتكرة تلبي احتياجات سوق العمل. انضم إلى أكاديمية آجي نكوديو لتتعلم من نخبة الخبراء في المجال، وابدأ رحلتك نحو مستقبل مهني واعد</p>
                     <div class="mx-auto max-w-none" x-data>
                         <a class="transition-transform transform hover:scale-105 btn text-white w-full md:max-w-fit md:my-6" style="background-color:#0fb579" href="#trainings">أريد أن أتعلم</a>
