--- a/src/ar/backend.njk
+++ b/src/ar/backend.njk
@@ -1,5 +1,7 @@
 ---
 layout: pages/backend.njk
-title: "تدريب آجي نكوديو: أساسيات البرمجة وأفضل الممارسات"
-desc: "تعلم أساسيات البرمجة وأفضل الممارسات مع تدريب آجي نكوديو، حيث يمكنك بناء أساس قوي للبرمجة الحديثة. سواء كنت مبتدئًا أو محترفًا، نوفر لك دورات مخصصة تغطي المفاهيم الأساسية، مثل كتابة كود نظيف، وإدارة المشاريع، وحل المشكلات البرمجية. استمتع بحصص مباشرة، مشاريع تطبيقية عملية، ودعم شخصي لتطوير مهاراتك. نوفر لك أيضًا مواد تعليمية متقدمة وشهادات معتمدة عند إكمال الدورة بنجاح، إلى جانب تسجيلات الحصص للرجوع إليها وقت الحاجة. ابدأ اليوم واكتسب الأدوات التي تحتاجها للنجاح في عالم البرمجة المتطور."
+title: "تدريب آجي نكوديو: تطوير الواجهة الخلفية"
+meta_description: "تعلم تطوير الواجهة الخلفية وأفضل الممارسات مع تدريب آجي نكوديو. احصل على التدريب اللازم لبناء أساس قوي في البرمجة الحديثة من خلال دورات متخصصة ودعم شخصي."
+meta_keywords: "تدريب البرمجة, تطوير الواجهة الخلفية, تطوير البرمجيات, البرمجة الحديثة, إدارة المشاريع البرمجية, تعلم البرمجة, الدورات التدريبية البرمجية"
+meta_author: "كريم العيساوي, أشرف تفاح"
 ---
