--- a/src/ar/c-and-cpp.njk
+++ b/src/ar/c-and-cpp.njk
@@ -1,5 +1,7 @@
 ---
 layout: pages/c-and-cpp.njk
-title: "تدريب آجي نكوديو: أساسيات البرمجة وأفضل الممارسات"
-desc: "تعلم أساسيات البرمجة وأفضل الممارسات مع تدريب آجي نكوديو، حيث يمكنك بناء أساس قوي للبرمجة الحديثة. سواء كنت مبتدئًا أو محترفًا، نوفر لك دورات مخصصة تغطي المفاهيم الأساسية، مثل كتابة كود نظيف، وإدارة المشاريع، وحل المشكلات البرمجية. استمتع بحصص مباشرة، مشاريع تطبيقية عملية، ودعم شخصي لتطوير مهاراتك. نوفر لك أيضًا مواد تعليمية متقدمة وشهادات معتمدة عند إكمال الدورة بنجاح، إلى جانب تسجيلات الحصص للرجوع إليها وقت الحاجة. ابدأ اليوم واكتسب الأدوات التي تحتاجها للنجاح في عالم البرمجة المتطور."
+title: "تدريب آجي نكوديو: تعلم C و C++ من البداية إلى الاحتراف"
+meta_description: "تعلم لغات البرمجة C و C++ مع تدريب آجي نكوديو. احصل على أساس قوي في البرمجة وابدأ بتطوير مهاراتك في البرمجة الحديثة باستخدام C و C++."
+meta_keywords: "تدريب C, تدريب C++, تعلم البرمجة, البرمجة بلغة C, البرمجة بلغة C++, أفضل ممارسات البرمجة, كتابة كود نظيف"
+meta_author: "كريم العيساوي, أشرف تفاح"
 ---
