--- a/src/ar/frontend.njk
+++ b/src/ar/frontend.njk
@@ -1,5 +1,7 @@
 ---
 layout: pages/frontend.njk
-title: "تدريب آجي نكوديو: أساسيات البرمجة وأفضل الممارسات"
-desc: "تعلم أساسيات البرمجة وأفضل الممارسات مع تدريب آجي نكوديو، حيث يمكنك بناء أساس قوي للبرمجة الحديثة. سواء كنت مبتدئًا أو محترفًا، نوفر لك دورات مخصصة تغطي المفاهيم الأساسية، مثل كتابة كود نظيف، وإدارة المشاريع، وحل المشكلات البرمجية. استمتع بحصص مباشرة، مشاريع تطبيقية عملية، ودعم شخصي لتطوير مهاراتك. نوفر لك أيضًا مواد تعليمية متقدمة وشهادات معتمدة عند إكمال الدورة بنجاح، إلى جانب تسجيلات الحصص للرجوع إليها وقت الحاجة. ابدأ اليوم واكتسب الأدوات التي تحتاجها للنجاح في عالم البرمجة المتطور."
+title: "تدريب آجي نكوديو: تعلم تطوير الواجهة الأمامية"
+meta_description: "تعلم تطوير الواجهة الأمامية مع تدريب آجي نكوديو. احصل على أساس قوي في بناء واجهات المستخدم باستخدام تقنيات حديثة مثل HTML, CSS, JavaScript، وReact."
+meta_keywords: "تدريب الواجهة الأمامية, تعلم HTML, تعلم CSS, تعلم JavaScript, تطوير الويب, تعلم React, تطوير واجهات المستخدم, برمجة الواجهة الأمامية"
+meta_author: "كريم العيساوي, أشرف تفاح"
 ---
