--- a/src/ar/graphic-design.njk
+++ b/src/ar/graphic-design.njk
@@ -1,5 +1,7 @@
 ---
-layout: pages/graphic-design.njk
-title: "تدريب آجي نكوديو: أساسيات البرمجة وأفضل الممارسات"
-desc: "تعلم أساسيات البرمجة وأفضل الممارسات مع تدريب آجي نكوديو، حيث يمكنك بناء أساس قوي للبرمجة الحديثة. سواء كنت مبتدئًا أو محترفًا، نوفر لك دورات مخصصة تغطي المفاهيم الأساسية، مثل كتابة كود نظيف، وإدارة المشاريع، وحل المشكلات البرمجية. استمتع بحصص مباشرة، مشاريع تطبيقية عملية، ودعم شخصي لتطوير مهاراتك. نوفر لك أيضًا مواد تعليمية متقدمة وشهادات معتمدة عند إكمال الدورة بنجاح، إلى جانب تسجيلات الحصص للرجوع إليها وقت الحاجة. ابدأ اليوم واكتسب الأدوات التي تحتاجها للنجاح في عالم البرمجة المتطور."
+    layout: pages/graphic-design.njk
+    title: "تدريب آجي نكوديو: تعلم التصميم الجرافيكي"
+    meta_description: "تعلم التصميم الجرافيكي مع تدريب آجي نكوديو. احصل على أساس قوي في التصميم باستخدام أدوات مثل Photoshop وIllustrator، وابدأ في تطوير مهاراتك الإبداعية."
+    meta_keywords: "تدريب التصميم الجرافيكي, تعلم Photoshop, تعلم Illustrator, تصميم الشعارات, تصميم الويب, تعلم الإبداع, دورة التصميم الجرافيكي"
+    meta_author: "كريم العيساوي, أشرف تفاح"
 ---
