--- a/src/ar/javascript.njk
+++ b/src/ar/javascript.njk
@@ -1,5 +1,7 @@
 ---
-layout: pages/javascript.njk
-title: "تدريب آجي نكوديو: أساسيات البرمجة وأفضل الممارسات"
-desc: "تعلم أساسيات البرمجة وأفضل الممارسات مع تدريب آجي نكوديو، حيث يمكنك بناء أساس قوي للبرمجة الحديثة. سواء كنت مبتدئًا أو محترفًا، نوفر لك دورات مخصصة تغطي المفاهيم الأساسية، مثل كتابة كود نظيف، وإدارة المشاريع، وحل المشكلات البرمجية. استمتع بحصص مباشرة، مشاريع تطبيقية عملية، ودعم شخصي لتطوير مهاراتك. نوفر لك أيضًا مواد تعليمية متقدمة وشهادات معتمدة عند إكمال الدورة بنجاح، إلى جانب تسجيلات الحصص للرجوع إليها وقت الحاجة. ابدأ اليوم واكتسب الأدوات التي تحتاجها للنجاح في عالم البرمجة المتطور."
+    layout: pages/javascript.njk
+    title: "تدريب آجي نكوديو: تعلم البرمجة باستخدام JavaScript"
+    meta_description: "تعلم البرمجة باستخدام JavaScript مع تدريب آجي نكوديو. احصل على مهارات متقدمة في تطوير الويب والتفاعل مع العناصر عبر JavaScript، من خلال دورات عملية وعمل مشاريع حقيقية."
+    meta_keywords: "دورات JavaScript, تعلم JavaScript, برمجة JavaScript, تدريب JavaScript, تطوير الويب, JavaScript للمبتدئين, أكاديمية البرمجة"
+    meta_author: "كريم العيساوي, أشرف تفاح"
 ---
