--- a/src/ar/office-it.njk
+++ b/src/ar/office-it.njk
@@ -1,5 +1,7 @@
 ---
-layout: pages/office-it.njk
-title: "تدريب آجي نكوديو: أساسيات البرمجة وأفضل الممارسات"
-desc: "تعلم أساسيات البرمجة وأفضل الممارسات مع تدريب آجي نكوديو، حيث يمكنك بناء أساس قوي للبرمجة الحديثة. سواء كنت مبتدئًا أو محترفًا، نوفر لك دورات مخصصة تغطي المفاهيم الأساسية، مثل كتابة كود نظيف، وإدارة المشاريع، وحل المشكلات البرمجية. استمتع بحصص مباشرة، مشاريع تطبيقية عملية، ودعم شخصي لتطوير مهاراتك. نوفر لك أيضًا مواد تعليمية متقدمة وشهادات معتمدة عند إكمال الدورة بنجاح، إلى جانب تسجيلات الحصص للرجوع إليها وقت الحاجة. ابدأ اليوم واكتسب الأدوات التي تحتاجها للنجاح في عالم البرمجة المتطور."
+    layout: pages/office-it.njk
+    title: "تدريب آجي نكوديو: دورات متخصصة في تكنولوجيا المعلومات للمكاتب"
+    meta_description: "تعلم تكنولوجيا المعلومات للمكاتب مع تدريب آجي نكوديو. اكتسب المهارات الأساسية في تطبيقات المكتب مثل Excel، Word، PowerPoint، بالإضافة إلى أدوات إدارة المشاريع. اجعل عملك أكثر إنتاجية باستخدام تقنيات حديثة."
+    meta_keywords: "تدريب تكنولوجيا المعلومات للمكاتب, دورات تكنولوجيا المعلومات, تعلم Excel, تعلم PowerPoint, تعلم Word, إدارة المشاريع, أكاديمية تكنولوجيا المعلومات"
+    meta_author: "كريم العيساوي, أشرف تفاح"
 ---
