--- a/src/ar/python.njk
+++ b/src/ar/python.njk
@@ -1,5 +1,7 @@
 ---
-layout: pages/python.njk
-title: "تدريب آجي نكوديو: أساسيات البرمجة وأفضل الممارسات"
-desc: "تعلم أساسيات البرمجة وأفضل الممارسات مع تدريب آجي نكوديو، حيث يمكنك بناء أساس قوي للبرمجة الحديثة. سواء كنت مبتدئًا أو محترفًا، نوفر لك دورات مخصصة تغطي المفاهيم الأساسية، مثل كتابة كود نظيف، وإدارة المشاريع، وحل المشكلات البرمجية. استمتع بحصص مباشرة، مشاريع تطبيقية عملية، ودعم شخصي لتطوير مهاراتك. نوفر لك أيضًا مواد تعليمية متقدمة وشهادات معتمدة عند إكمال الدورة بنجاح، إلى جانب تسجيلات الحصص للرجوع إليها وقت الحاجة. ابدأ اليوم واكتسب الأدوات التي تحتاجها للنجاح في عالم البرمجة المتطور."
+    layout: pages/python.njk
+    title: "تدريب آجي نكوديو: تعلم أساسيات البرمجة باستخدام Python"
+    meta_description: "انطلق في تعلم البرمجة مع Python من خلال تدريب آجي نكوديو. تعلم المفاهيم الأساسية، كتابة كود نظيف، إدارة المشاريع البرمجية، وأفضل الممارسات. احصل على دعم شخصي ودورات مخصصة لتحقيق النجاح في البرمجة."
+    meta_keywords: "دورات Python, تعلم Python, تدريب البرمجة, تدريب آجي نكوديو, تعلم البرمجة, كتابة كود نظيف, إدارة المشاريع البرمجية, تعلم البرمجة للمبتدئين"
+    meta_author: "كريم العيساوي, أشرف تفاح"
 ---
