--- a/src/ar/termsofuse.njk
+++ b/src/ar/termsofuse.njk
@@ -1,6 +1,9 @@
 ---
-layout: main.njk
-title: شروط الاستخدام
+    layout: main.njk
+    title: "شروط الاستخدام - Ajincodew Academy"
+    meta_description: "اطلع على شروط الاستخدام الخاصة بـ Ajincodew Academy. تعرف على القوانين والأنظمة التي تحكم استخدامك للموقع والخدمات المقدمة."
+    meta_keywords: "شروط الاستخدام, Ajincodew Academy, سياسة الاستخدام, قوانين الموقع, حقوق الاستخدام"
+    meta_author: "كريم العيساوي, أشرف تفاح"
 ---
 <main class="flex-grow">
     <section class="relative">
@@ -14,18 +17,18 @@ title: شروط الاستخدام
                     <p dir="rtl">
                         شروط الاسخدام لأي زائر يدخل هذا الموقع :<br />
                         <br />
-                        سياسة الخصوصيه : أجينكوديو دوت كوم يحترم سياسة الخصوصيه لديك , و لك كامل التحكم بمعلوماتك و لن يتم
+                        سياسة الخصوصيه : آجينكوديو دوت كوم يحترم سياسة الخصوصيه لديك , و لك كامل التحكم بمعلوماتك و لن يتم
                         تجميعها الا باذنك و برغبتك انت طبعاً , و قد قمنا بعمل صفحه كامله تعرف فيها سياسة الخصوصيه الخاصه
                         بهذا الموقع من خلال الضغط على هذا الرابط من هنا.
                         <br />
                         <br />
-                        العلامات التجاريه : أجينكوديو أكاديمي لا تقبل وجود علامات تجاريه هنا على هذا الموقع , هذا يضر بمصلحة
+                        العلامات التجاريه : آجينكوديو أكاديمي لا تقبل وجود علامات تجاريه هنا على هذا الموقع , هذا يضر بمصلحة
                         الزائر .. و لا يجوز لك عمل اي عمليه تهدف الى تسويق علامه تجاريه معينه , الا طبعا اذا استأذنت من
                         صاحب الموقع و وافق هو على ذلك.
                         <br /><br />
                         لأي استفسار حول هذه الشروط , يرجى ارسال ايميل الى
-                        <br /><a class="text-blue-600 hover:underline"
-                            href="mailto:ajincodew.academy@gmail.com">ajincodew.academy@gmail.com</a>
+                        <br />
+                        <a class="text-blue-600 hover:underline" href="mailto:ajincodew.academy@gmail.com">ajincodew.academy@gmail.com</a>
                     </p>
                 </div>
             </div>
