--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -14,11 +14,8 @@
         <!-- Stylesheets -->
         <link rel="stylesheet" href="{{ '/assets/css/tailwind.css' | url }}">
 
-        
-
         <!-- Ensure app.js is always included -->
         <script src="/js/app.js" defer></script>
-
 
         <!-- Description Meta Tag -->
         {% if desc %}
@@ -69,7 +66,7 @@
         <meta name="theme-color" content="#ffffff">
 
         <link rel="alternate icon" sizes="16x16" href="/favicon.ico?v=1" type="image/x-icon">
-        </script> 
+        <meta name="google-adsense-account" content="ca-pub-5072302374460982">
     </head>
     <body class=" text-base-900 dark:bg-gray-900 dark:text-white font-inter antialiased  text-base-900 dark:bg-gray-900  tracking-tight flex flex-col min-h-screen">
         <nav class="bg-[white] dark:bg-gray-800  fixed top-0 left-0 w-full bg-white shadow-ajincodew z-50 pt-1" dir="ltr" x-data="{ navbar: false, scrolled: false }" @scroll.window="scrolled = window.scrollY > 10" :class="scrolled ? 'border-b border-gray-200' : ''">
