--- a/src/ar/frontend.njk
+++ b/src/ar/frontend.njk
@@ -1,7 +1,23 @@
 ---
 layout: pages/frontend.njk
-title: "تدريب آجي نكوديو: تعلم تطوير الواجهة الأمامية"
-meta_description: "تعلم تطوير الواجهة الأمامية مع تدريب آجي نكوديو. احصل على أساس قوي في بناء واجهات المستخدم باستخدام تقنيات حديثة مثل HTML, CSS, JavaScript، وReact."
-meta_keywords: "تدريب الواجهة الأمامية, تعلم HTML, تعلم CSS, تعلم JavaScript, تطوير الويب, تعلم React, تطوير واجهات المستخدم, برمجة الواجهة الأمامية"
+title: "تعلم تطوير الواجهة الأمامية مع آجي نكوديو | HTML، CSS، JavaScript، وReact"
+meta_description: "تعلم تطوير الواجهة الأمامية من الصفر حتى الاحتراف مع أكاديمية آجي نكوديو. تدريب عملي يغطي HTML، CSS، JavaScript، وReact لبناء مواقع وتطبيقات ويب احترافية. ابدأ رحلتك في البرمجة الآن!"
+meta_keywords: "تطوير الواجهة الأمامية, تعلم HTML من الصفر, كورسات CSS, كورسات JavaScript, كورس React, تدريب برمجة الويب, واجهات المستخدم, تعلم برمجة المواقع, آجي نكوديو, تكوين في البرمجة"
 meta_author: "كريم العيساوي, أشرف تفاح"
+canonical_url: "https://ajincodew.com/ar/frontend"
+lang: "ar"
+robots: "index, follow"
 ---
+<script type="application/ld+json">
+{
+  "@context": "ajincodew",
+  "@type": "Course,Training",
+  "name": "تدريب تطوير الواجهة الأمامية",
+  "description": "تعلم HTML، CSS، JavaScript، وReact مع آجي نكوديو وابدأ مسارك المهني في برمجة الويب.",
+  "provider": {
+    "@type": "Organization",
+    "name": "أكاديمية آجي نكوديو",
+    "url": "https://ajincodew.com"
+  }
+}
+</script>
